// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders correctly with custom background color 1`] = `
<DocumentFragment>
  .css-hjx5aa-AvatarContainer {
  height: 32px;
  width: 32px;
}

.css-1whnewf-StyledTextAvatar {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 100%;
  color: #ffffff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="css-hjx5aa-AvatarContainer ec0473m0"
    size="32"
  >
    <span
      class="css-1whnewf-StyledTextAvatar ec0473m1"
    >
      HW
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with custom text color 1`] = `
<DocumentFragment>
  .css-hjx5aa-AvatarContainer {
  height: 32px;
  width: 32px;
}

.css-1htqhnw-StyledTextAvatar {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b824f9;
  border-radius: 100%;
  color: #FFFFFF;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="css-hjx5aa-AvatarContainer ec0473m0"
    size="32"
  >
    <span
      class="css-1htqhnw-StyledTextAvatar ec0473m1"
    >
      HW
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with default props 1`] = `
<DocumentFragment>
  .css-hjx5aa-AvatarContainer {
  height: 32px;
  width: 32px;
}

<div
    class="css-hjx5aa-AvatarContainer ec0473m0"
    size="32"
  >
    <img
      alt=""
      height="100%"
      src="test-file-stub"
      width="100%"
    />
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with lock 1`] = `
<DocumentFragment>
  .css-hjx5aa-AvatarContainer {
  height: 32px;
  width: 32px;
}

.css-1lc61rv-StyledTextAvatar {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #e9eaeb;
  border-radius: 100%;
  color: #ffffff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

.css-n8p420-sizeStyles {
  vertical-align: middle;
  fill: #727683;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.css-n8p420-sizeStyles .fillStroke {
  stroke: #727683;
  fill: none;
}

<div
    class="css-hjx5aa-AvatarContainer ec0473m0"
    size="32"
  >
    <span
      class="css-1lc61rv-StyledTextAvatar ec0473m1"
    >
      <svg
        class="css-n8p420-sizeStyles e1gt4cfo0"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M10.0001 2.5C7.92901 2.5 6.25008 4.17893 6.25008 6.25V9.16667H5.83341C4.91294 9.16667 4.16675 9.91286 4.16675 10.8333V15.8333C4.16675 16.7538 4.91294 17.5 5.83341 17.5H14.1667C15.0872 17.5 15.8334 16.7538 15.8334 15.8333V10.8333C15.8334 9.91286 15.0872 9.16667 14.1667 9.16667H13.7501V6.25C13.7501 4.17893 12.0711 2.5 10.0001 2.5ZM12.5001 9.16667V6.25C12.5001 4.86929 11.3808 3.75 10.0001 3.75C8.61937 3.75 7.50008 4.86929 7.50008 6.25V9.16667H12.5001Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with sentence 1`] = `
<DocumentFragment>
  .css-hjx5aa-AvatarContainer {
  height: 32px;
  width: 32px;
}

.css-rma379-StyledTextAvatar {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b824f9;
  border-radius: 100%;
  color: #ffffff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="css-hjx5aa-AvatarContainer ec0473m0"
    size="32"
  >
    <span
      class="css-rma379-StyledTextAvatar ec0473m1"
    >
      HW
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with size 1`] = `
<DocumentFragment>
  .css-xgtog4-AvatarContainer {
  height: 48px;
  width: 48px;
}

<div
    class="css-xgtog4-AvatarContainer ec0473m0"
    size="48"
  >
    <img
      alt=""
      height="100%"
      src="test-file-stub"
      width="100%"
    />
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with small text 1`] = `
<DocumentFragment>
  .css-hjx5aa-AvatarContainer {
  height: 32px;
  width: 32px;
}

.css-rma379-StyledTextAvatar {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b824f9;
  border-radius: 100%;
  color: #ffffff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="css-hjx5aa-AvatarContainer ec0473m0"
    size="32"
  >
    <span
      class="css-rma379-StyledTextAvatar ec0473m1"
    >
      HW
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with text 1`] = `
<DocumentFragment>
  .css-hjx5aa-AvatarContainer {
  height: 32px;
  width: 32px;
}

.css-rma379-StyledTextAvatar {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b824f9;
  border-radius: 100%;
  color: #ffffff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="css-hjx5aa-AvatarContainer ec0473m0"
    size="32"
  >
    <span
      class="css-rma379-StyledTextAvatar ec0473m1"
    >
      HE
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with text and custom style 1`] = `
<DocumentFragment>
  .css-hjx5aa-AvatarContainer {
  height: 32px;
  width: 32px;
}

.css-14vatin-StyledTextAvatar {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: red;
  border-radius: 100%;
  color: white;
  font-size: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="css-hjx5aa-AvatarContainer ec0473m0"
    size="32"
  >
    <span
      class="css-14vatin-StyledTextAvatar ec0473m1"
    >
      HW
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with text size 1`] = `
<DocumentFragment>
  .css-1yyml98-AvatarContainer {
  height: 50px;
  width: 50px;
}

.css-1pv5uzr-StyledTextAvatar {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b824f9;
  border-radius: 100%;
  color: #ffffff;
  font-size: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="css-1yyml98-AvatarContainer ec0473m0"
    size="50"
  >
    <span
      class="css-1pv5uzr-StyledTextAvatar ec0473m1"
    >
      HE
    </span>
  </div>
</DocumentFragment>
`;
